# Atest

ds/: .env-example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
ds/config/: settings.py  urls.py
ds/network/: admin.py  models.py  serializers.py  views.py
